<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">ComplianceReportHomeFinance</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_ldwps1756p">LDWPS1756P</string>
    <string name="lbl_city">City</string>
    <string name="lbl_buy_house">Do you want to buy house? Yes/No</string>
    <string name="msg_rb_iii_colony">RB III Colony, room no 32/15</string>
    <string name="lbl_loan_type">Loan Type</string>
    <string name="msg_tell_us_about_y">Tell us about your purpose</string>
    <string name="msg_if_you_have_any2">If you have any questions or queries, contact us at </string>
    <string name="msg_professional_de">Professional Details</string>
    <string name="lbl_identity_proof">Identity Proof</string>
    <string name="msg_verify_your_ide">Verify your identity</string>
    <string name="msg_ownership_statu">Ownership status</string>
    <string name="msg_let_s_get_to_kn">"Let's get to know you!"</string>
    <string name="lbl_address_details">Address Details</string>
    <string name="msg_share_you_addre">Share you address details</string>
    <string name="msg_let_s_know_your">Let\u2019s know your work life</string>
    <string name="lbl_loan_details">Loan Details</string>
    <string name="msg_start_by_tellin">Start by telling us a bit about yourself</string>
    <string name="lbl_occupation">Occupation</string>
    <string name="lbl_loan_amount">Loan Amount</string>
    <string name="lbl_rented">Rented</string>
    <string name="msg_your_applicatio">Your application is submitted</string>
    <string name="msg_where_s_your_ho">Where\u2019s your home? </string>
    <string name="lbl_ex_serviceman">Ex-Serviceman</string>
    <string name="lbl_7719074414">7719074414</string>
    <string name="msg_7297_6467_0192">7297 6467 0192 1273</string>
    <string name="msg_if_you_have_any">If you have any questions or queries, contact us at iifl@gmail.com</string>
    <string name="msg_personal_detail">Personal Details</string>
    <string name="msg_share_your_loan">Share your loan details here</string>
    <string name="lbl_iifl_gmail_com">iifl@gmail.com</string>
    <string name="lbl_sion">Sion</string>
    <string name="lbl_1_30_000">\u20b9 1,30,000</string>
    <string name="lbl_home_loan">Home Loan</string>
    <string name="lbl_15_00_000">\u20b9 15,00,000</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_12_34pm">12:34PM</string>
    <string name="lbl_pincode">Pincode</string>
    <string name="lbl_salaried">Salaried</string>
    <string name="msg_100_data_secur">100% Data security</string>
    <string name="lbl_400708">400708</string>
    <string name="lbl_almost_there">Almost there!</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_krishna">Krishna </string>
    <string name="lbl_first_name">First Name</string>
    <string name="msg_share_your_prof">Share your professional details here</string>
    <string name="lbl_save_as_draft">Save as Draft</string>
    <string name="msg_provide_your_go">Provide your government-issued ID details</string>
    <string name="lbl_address_line_2">Address Line 2</string>
    <string name="msg_you_ll_receive">"You'll receive updates on your mobile number and email ID regarding your application status"</string>
    <string name="lbl_address_line_1">Address Line 1</string>
    <string name="msg_next_to_gtb_nag">next to GTB nagar station</string>
    <string name="lbl_income_type">Income Type</string>
    <string name="lbl_27th_jun_23">27th Jun \u201823</string>
    <string name="lbl_aadhaar_number">Aadhaar number</string>
    <string name="lbl_pan_number">PAN number</string>
    <string name="msg_need_assistance">Need assistance?</string>
    <string name="lbl_monthly_income">Monthly Income</string>
    <string name="lbl_owned">Owned</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_nu">Please enter valid number</string>
    <string name="error_space">.\u0020\u0020</string>
</resources>
