<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLarge777VM" type="com.kirtikumarsapplication.app.modules.androidlarge777.data.viewmodel.AndroidLarge777VM"/>
    </data>
    <FrameLayout android:id="@+id/frameStackcheckmark"
        android:layout_height="match_parent" android:layout_width="match_parent">
        <LinearLayout android:id="@+id/linearAndroidLarge"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <FrameLayout android:gravity="start"
                android:id="@+id/frameStack"
                android:layout_height="@dimen/_62pxv"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent" style="@style/groupStylewhite_1">
                <ImageView android:id="@+id/imageImage726"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_22pxh"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="@dimen/_120pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image726"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image726"/>
            </FrameLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumncheckmark"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_96pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStyledeep_orange_600_63cornerRadius">
                <ImageButton
                    android:background="@drawable/rectangle_bg_yellow_900_radius_26"
                    android:id="@+id/btnCheckmark"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_52pxh"
                    android:layout_marginHorizontal="@dimen/_42pxh"
                    android:layout_marginVertical="@dimen/_42pxv"
                    android:layout_width="@dimen/_52pxh"
                    android:paddingHorizontal="@dimen/_15pxh"
                    android:paddingVertical="@dimen/_15pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_checkmark_white_a700" tools:ignore="ContentDescription"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtYourapplicatio"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{androidLarge777VM.androidLarge777Model.txtYourapplicatio}"
                style="@style/txtIntersemibold18" tools:text="@string/msg_your_applicatio"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRow27thjuntwentythree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txt27thJunTwentyThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.57"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{androidLarge777VM.androidLarge777Model.txt27thJunTwentyThree}"
                    style="@style/txtIntermedium12" tools:text="@string/lbl_27th_jun_23"/>
                <View
                    android:background="@drawable/rectangle_bg_gray_701_radius_1_5"
                    android:id="@+id/viewEllipse3831"
                    android:layout_height="@dimen/_3pxh"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_6pxv" android:layout_width="@dimen/_3pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTime"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.4"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{androidLarge777VM.androidLarge777Model.txtTime}"
                    style="@style/txtIntermedium12" tools:text="@string/lbl_12_34pm"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnyoullreceive"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylered_50cornerRadius">
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtYoullreceive"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:text="@{androidLarge777VM.androidLarge777Model.txtYoullreceive}"
                    style="@style/txtIntermedium12_3" tools:text="@string/msg_you_ll_receive"/>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/check_compliance_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="#607CF2"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="Check Compliance"
                android:textColor="#FFFFFF"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center_landing_ph"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
                app:strokeColor="#607CF2" />
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnneedassistance"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_87pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_2">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNeedassistance"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{androidLarge777VM.androidLarge777Model.txtNeedassistance}"
                    style="@style/txtIntermedium14_5" tools:text="@string/msg_need_assistance"/>
                <TextView android:id="@+id/txtIfyouhaveany"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:text="@{androidLarge777VM.androidLarge777Model.txtIfyouhaveany}"
                    style="@style/txtIntermedium12_4" tools:text="@string/msg_if_you_have_any"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:backgroundTint="@color/blue_700"
            android:id="@+id/floatingBtnFloatingactionbutton"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            app:fabCustomSize="@dimen/_66pxh"
            app:srcCompat="@drawable/img_music" app:tint="@color/white_A700"/>
    </FrameLayout>
</layout>
