<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="finalDecisionVM"
            type="com.kirtikumarsapplication.app.modules.final_decision.data.viewmodel.FinalDecisionVM" />
    </data>

    <FrameLayout
        android:id="@+id/frameStackcheckmark"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearAndroidLarge"
            style="@style/groupStylewhite_A700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameStack"
                style="@style/groupStylewhite_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_62pxv"
                android:layout_marginTop="@dimen/_12pxv"
                android:gravity="start">

                <ImageView
                    android:id="@+id/imageImage726"
                    android:layout_width="@dimen/_120pxh"
                    android:layout_height="@dimen/_22pxh"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image726"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_image726" />
            </FrameLayout>

            <ImageView
                android:id="@+id/tick_view"
                android:layout_width="@dimen/_150pxh"
                android:layout_height="@dimen/_150pxh"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_96pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:gravity="center_horizontal"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/txtYourapplicatio"
                style="@style/txtIntersemibold18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{finalDecisionVM.finalDecisionModel.txtYourapplicatio}"
                tools:text="@string/msg_your_applicatio" />

            <LinearLayout
                android:id="@+id/linearRow27thjuntwentythree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt27thJunTwentyThree"
                    style="@style/txtIntermedium12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.57"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{finalDecisionVM.finalDecisionModel.txt27thJunTwentyThree}"
                    tools:text="@string/lbl_27th_jun_23" />

                <View
                    android:id="@+id/viewEllipse3831"
                    android:layout_width="@dimen/_3pxh"
                    android:layout_height="@dimen/_3pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:background="@drawable/rectangle_bg_gray_701_radius_1_5" />

                <TextView
                    android:id="@+id/txtTime"
                    style="@style/txtIntermedium12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.4"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{finalDecisionVM.finalDecisionModel.txtTime}"
                    tools:text="@string/lbl_12_34pm" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearColumnyoullreceive"
                style="@style/groupStylered_50cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtYoullreceive"
                    style="@style/txtIntermedium12_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:gravity="center_horizontal"
                    android:text="@{finalDecisionVM.finalDecisionModel.txtYoullreceive}"
                    tools:text="@string/msg_you_ll_receive" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/check_compliance_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="#607CF2"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="Check Compliance"
                android:textColor="#FFFFFF"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center_landing_ph"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
                app:strokeColor="#607CF2" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/progressView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#31000000"
            android:padding="20dp"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/ProgressBar01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />

        </RelativeLayout>

    </FrameLayout>
</layout>
